snapshots/parsers/syntax/library/functions/file/curdir/curdir_with_left.snap
---
source: src/syntax/library/functions/file/curdir.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: AssignmentStatement
      children:
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: drive
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: CallExpression
          children:
            - kind: Identifier
              text: Left
            - kind: LeftParenthesis
              text: (
            - kind: ArgumentList
              children:
                - kind: Argument
                  children:
                    - kind: CallExpression
                      children:
                        - kind: Identifier
                          text: CurDir
                        - kind: LeftParenthesis
                          text: (
                        - kind: ArgumentList
                          children: []
                        - kind: RightParenthesis
                          text: )
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: Argument
                  children:
                    - kind: NumericLiteralExpression
                      children:
                        - kind: IntegerLiteral
                          text: "1"
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
